--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 My confs
 
-* Distro: Void Linux
-* Window manager: awesome
-* Editor: vim
+* Distro: [Void Linux](http://voidlinux.eu)
+* Window manager: [i3](http://i3wm.org)
+* Editor: [vim](http://vim.org)
 * Shell: zsh + antigen
-* Browser: xombrero
-* Terminal Emulator: xterm
+* Browser: qutebrowser
+* Terminal Emulator: urxvt
 * Client IRC: irssi
 
   I use caps lock changed as esc
